make my profile prettier

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <p>
             I'm student in Business and Finance at Bayes Business School, I love sport, new tech and having drinks with friends. I'm currently creating my own startup.
           </p>
-            <a href= "https://jumpn-app.com/" target="_blank" id="jumpn_url"> Discover Jump'n-Sport app</a>
+            <a href= "https://jumpn-app.com/" target="_blank" id="jumpn_url"> Discover the app!</a>
       </div>
 
       <div class="card">
@@ -44,21 +44,21 @@
 
       <div class="card">
         <h2>
-          Startup 🏃🏼
+          Startup 📲
           </h2>
             <p>
-            I'm the co-founder of Sport app called Jump'n. Our goal is to revolutionize the way people connect and organize sports activities. You know how hard it can be to find people to do sports with, right? Well, that's where Jump'n comes in - making it simple and fun.
+            I'm the co-founder of Sport app called Jump'n. Our goal is to revolutionize the way people connect and organize sports activities.
             </p>
       </div>
 
-      <div class="card">
+      <div class="card_social_media">
         <h2>
           Follow me:
         </h2>
             <ul>
               <li> <a href= https://www.linkedin.com/in/louis-clermont target="_blank" class="social_media_icons"><i class="fa-brands fa-linkedin"></i></a> </li>
               <li> <a href= https://www.instagram.com/louis_clermont/ target="_blank" class="social_media_icons" ><i class="fa-brands fa-square-instagram"></i></a> </li>
-            </ul>
+              <li> <a href= https://louis-clermont.github.io/profile/ target="_blank" class="social_media_icons" ><i class="fa-brands fa-github"></i></a>  </li>
       </div>
     </div>
   </body>
